Fixed comparisons and collection handling

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -54,6 +54,8 @@
     <Compile Include="UnitCollection.cs" />
     <Compile Include="XmlNamespaceManagerExtensions.cs" />
     <Compile Include="Instance.cs" />
+    <Compile Include="XmlQualifiedNameExtensions.cs" />
+    <Compile Include="IListExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
