--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -6,16 +6,16 @@
     <ProjectGuid>{DDD6F5C5-745B-4154-AEA5-98106851CAA9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Diwen.Xbrl</RootNamespace>
-    <AssemblyName>Xoxo</AssemblyName>
+    <AssemblyName>Diwen.Xbrl</AssemblyName>
     <Description>Library for reading, writing and comparing XBRL files</Description>
-    <ReleaseVersion>0.5</ReleaseVersion>
+    <ReleaseVersion>0.6</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
+    <DefineConstants>DEBUG;CODE_ANALYSIS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
@@ -55,7 +55,7 @@
     <Compile Include="XmlNamespaceManagerExtensions.cs" />
     <Compile Include="Instance.cs" />
     <Compile Include="XmlQualifiedNameExtensions.cs" />
-    <Compile Include="IListExtensions.cs" />
+    <Compile Include="ListExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
