bug fixes/enhancements: #1 Unused domain namespaces aren't removed #9 add "instance-generator" processing instruction

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -8,7 +8,8 @@
     <RootNamespace>Diwen.Xbrl</RootNamespace>
     <AssemblyName>Diwen.Xbrl</AssemblyName>
     <Description>Library for reading, writing and comparing XBRL files</Description>
-    <ReleaseVersion>0.10</ReleaseVersion>
+    <ReleaseVersion>0.11.0.0</ReleaseVersion>
+    <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,7 +35,6 @@
     </EnvironmentVariables>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
