First go at comparison report for two instances (#17 Failed equality comparison doesn't provide any useful info about differences)

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Instance.cs" />
     <Compile Include="XmlQualifiedNameExtensions.cs" />
     <Compile Include="ListExtensions.cs" />
+    <Compile Include="InstanceComparer.cs" />
+    <Compile Include="InstanceCompareReport.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
