Improved comparison of instances #19 InstanceComparer.Report does not compare contexts #20 InstanceComparer.Report does not compare facts #21 No way to select what to compare in InstanceComparer.Report

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -69,7 +69,8 @@
     <Compile Include="XmlQualifiedNameExtensions.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="InstanceComparer.cs" />
-    <Compile Include="InstanceCompareReport.cs" />
+    <Compile Include="ComparisonReport.cs" />
+    <Compile Include="ComparisonTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
