--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InstanceComparerTests.cs" />
     <Compile Include="InstanceTests.cs" />
+    <Compile Include="FactTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
