Fixing issues reported by Gendarme

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -71,6 +71,7 @@
     <Compile Include="InstanceComparer.cs" />
     <Compile Include="ComparisonReport.cs" />
     <Compile Include="ComparisonTypes.cs" />
+    <Compile Include="IXbrlObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
