bug fix: #39 Comparing FilingIndicator collections doesn't consider filed attribute

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="InstanceComparerTests.cs" />
     <Compile Include="InstanceTests.cs" />
     <Compile Include="FactTests.cs" />
+    <Compile Include="FilingIndicatorTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
