--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -67,11 +67,11 @@
     <Compile Include="XmlNamespaceManagerExtensions.cs" />
     <Compile Include="Instance.cs" />
     <Compile Include="XmlQualifiedNameExtensions.cs" />
-    <Compile Include="ListExtensions.cs" />
     <Compile Include="InstanceComparer.cs" />
     <Compile Include="ComparisonReport.cs" />
     <Compile Include="ComparisonTypes.cs" />
     <Compile Include="IXbrlObject.cs" />
+    <Compile Include="IListExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
