Partial bug fix: Comparison report needs details for units, entity etc when different #52

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -64,7 +64,6 @@
     <Compile Include="ContextCollection.cs" />
     <Compile Include="FactCollection.cs" />
     <Compile Include="UnitCollection.cs" />
-    <Compile Include="XmlNamespaceManagerExtensions.cs" />
     <Compile Include="Instance.cs" />
     <Compile Include="XmlQualifiedNameExtensions.cs" />
     <Compile Include="InstanceComparer.cs" />
@@ -72,6 +71,7 @@
     <Compile Include="ComparisonTypes.cs" />
     <Compile Include="IXbrlObject.cs" />
     <Compile Include="IListExtensions.cs" />
+    <Compile Include="InstanceInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
