--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="InstanceTests.cs" />
     <Compile Include="FactTests.cs" />
     <Compile Include="FilingIndicatorTests.cs" />
+    <Compile Include="ExternalTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
