--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="FilingIndicator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Segment.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="Entity.cs" />
