Formatting, static analysis, string interpolation

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="SBRInstanceTests.cs" />
     <Compile Include="InstanceTests.cs" />
     <Compile Include="ScenarioTests.cs" />
+    <Compile Include="IEnumerableExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
