minor tweaking adn refactoring

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>Diwen.Xbrl.Tests</RootNamespace>
     <AssemblyName>XbrlTests</AssemblyName>
     <ReleaseVersion>0.10</ReleaseVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
