--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -69,6 +69,7 @@
     <Compile Include="IXbrlObject.cs" />
     <Compile Include="IListExtensions.cs" />
     <Compile Include="InstanceInfo.cs" />
+    <Compile Include="XmlElementExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
