--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -70,6 +70,7 @@
     <Compile Include="IListExtensions.cs" />
     <Compile Include="InstanceInfo.cs" />
     <Compile Include="XmlElementExtensions.cs" />
+    <Compile Include="IEnumerableOfStringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
