bug fix: No way to choose basic comparisons #46

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -71,6 +71,7 @@
     <Compile Include="InstanceInfo.cs" />
     <Compile Include="XmlElementExtensions.cs" />
     <Compile Include="IEnumerableOfStringExtensions.cs" />
+    <Compile Include="BasicComparisons.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
