* InstanceComparerTests.cs: Add test for new reporting
* Diwen.Xbrl.csproj: add class for new reporting

* InstanceComparer.cs: add new reporting

* XmlElementExtensions.cs: update license text

--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -72,6 +72,7 @@
     <Compile Include="XmlElementExtensions.cs" />
     <Compile Include="IEnumerableOfStringExtensions.cs" />
     <Compile Include="BasicComparisons.cs" />
+    <Compile Include="ComparisonReportObjects.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
