rename test assembly

--- a/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
+++ b/Diwen.Xbrl.Tests/Diwen.Xbrl.Tests.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{2106AB61-D77B-4D79-BA51-01F4FDDA7244}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Diwen.Xbrl.Tests</RootNamespace>
-    <AssemblyName>XbrlTests</AssemblyName>
+    <AssemblyName>Diwen.Xbrl.Tests</AssemblyName>
     <ReleaseVersion>0.10</ReleaseVersion>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
