--- a/Diwen.Xbrl/Diwen.Xbrl.csproj
+++ b/Diwen.Xbrl/Diwen.Xbrl.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ComparisonReportObjects.cs" />
     <Compile Include="FactReport.cs" />
     <Compile Include="ContextReport.cs" />
+    <Compile Include="InstanceOptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
